Actualización de respuestas de errores y nuevo método para agrupar total de tareas por estado
