# src/swagger/index.yaml
@@ -1546,6 +1546,98 @@ paths:
           description: INTERNAL SERVER ERROR
   ###########################
   ########## TODOS ##########
+  /todos/dash:
+    get:
+      security:
+        - apiKey: [ ]
+      tags:
+        - Todos
+      summary: Return total number of ToDo by status
+      parameters:
+        - in: query
+          name: user
+          required: true
+          schema:
+            type: String
+          description: User ID
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                  response:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                        count:
+                          type: number
+                example:
+                  status: success
+                  message: Categories list
+                  response:
+                    - _id: StatusOne
+                      count: 10
+                    - id: StatusTwo
+                      count: 5
+        400:
+          description: BAD REQUEST
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                  response:
+                    type: object
+                example:
+                  status: error
+                  message: Ops, something went wrong | The credentials are not correct | Data integrity error
+                  response:
+        401:
+          description: UNATHORIZED ACCESS
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                example:
+                  status: error
+                  message: Unathorized access
+        403:
+          description: FORBIDDEN ACCESS
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                example:
+                  status: error
+                  message: Forbidden access
+        500:
+          description: INTERNAL SERVER ERROR
   /todos:
     get:
       security:
